--- a/index.html
+++ b/index.html
@@ -3,22 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Foto/Vidoe</title>
+    <title>PhotoXPert</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <header>
+    <header id="acasa">
         <div class="navStyle">
             <nav>
-                <h1>Foto/Video</h1>
+                <h1>PhotoXPert</h1>
                 <ul>
-                    <li><a href="#">Despre</a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
+                    <li><a href="#acasa">Acasă</a></li>
+                    <li><a href="#despre">Despre Noi</a></li>
+                    <li><a href="#pachete">Pachete</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
         </div>
-        
+        <section class="hero"></section>
     </header>
 </body>
 </html>
