--- a/index.html
+++ b/index.html
@@ -1,25 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PhotoXPert</title>
-    <link rel="stylesheet" href="./style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
     <header id="acasa">
-        <div class="navStyle">
-            <nav>
-                <h1>PhotoXPert</h1>
-                <ul>
-                    <li><a href="#acasa">Acasă</a></li>
-                    <li><a href="#despre">Despre Noi</a></li>
-                    <li><a href="#pachete">Pachete</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </nav>
+      <div class="navStyle">
+        <nav>
+          <h1>PhotoXPert</h1>
+          <ul>
+            <li><a href="#acasa">Acasă</a></li>
+            <li><a href="#despre">Despre Noi</a></li>
+            <li><a href="#pachete">Pachete</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
+      <section class="hero">
+        <div class="heroText">
+          <h2>Capturam momentul, creatia devine eternitate!</h2>
+          <p>
+            Bun venit în universul vizual captivant, creat de lentilele noastre
+            de sticlă! Suntem PhotoXPert, un studio foto cu o bogată experiență
+            și o pasiune adâncă pentru arta fotografiei. Fiecare fotografie pe
+            care o imortalizăm este o poveste unică, o mărturie a unui moment
+            prețios în timp, transformată într-o amintire veșnică.
+          </p>
         </div>
-        <section class="hero"></section>
+        <img src="./img/Asset 1.svg" alt="">
+      </section>
     </header>
-</body>
+  </body>
 </html>
