--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <ul>
             <li><a href="#acasa">Acasă</a></li>
             <li><a href="#despre">Despre Noi</a></li>
-            <li><a href="#pachete">Pachete</a></li>
+            <li id="pachete"><a href="#pachete" >Pachete</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
         </nav>
@@ -33,5 +33,8 @@
         <img src="./img/Asset 1.svg" alt="">
       </section>
     </header>
+    <section id="despre">
+      
+    </section>
   </body>
 </html>
