--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <ul>
             <li><a href="#acasa">Acasă</a></li>
             <li><a href="#despre">Despre Noi</a></li>
-            <li id="pachete"><a href="#pachete" >Pachete</a></li>
+            <li><a href="#pachete">Pachete</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
         </nav>
@@ -33,15 +33,12 @@
         <img src="./img/Asset 1.svg" alt="">
       </section>
     </header>
-    <section id="despre">
-      
-    </section>
   </body>
 </html>
 <script>
     function schimaSite(){
         var x=document.getElementById("hero");
-        var y=document.getElementById("oppenheimer");
+        var y=document.getElementById("");
             if(x.style.display=="none") {
                 x.style.display="block";
                 y.style.display="none";
